Text no longer overflows

--- a/styles.css
+++ b/styles.css
@@ -63,4 +63,6 @@ h1 {
 
 p {
   color: white;
+  width: 300px;
+  word-wrap: break-word;
 }
